--- a/web-static-tailwind/package.json
+++ b/web-static-tailwind/package.json
@@ -1,8 +1,11 @@
 {
   "devDependencies": {
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^4.0.1"
   },
   "scripts": {
-		"css": "npx tailwindcss -i ./src/css/input.css -o ./src/css/app.css --watch"
-	}
+    "css": "npx @tailwindcss/cli -i ./src/css/input.css -o ./src/css/app.css --watch"
+  },
+  "dependencies": {
+    "@tailwindcss/cli": "^4.0.1"
+  }
 }
